--- a/index.html
+++ b/index.html
@@ -9,34 +9,22 @@
 </head>
 <body>
   <div class="grid-container outline">
-    <div class="row">
-        <div class="col-1"><p>col-1</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-    </div> 
-    <div class="row">
-        <div class="col-2"><p>col-2</p></div> 
-        <div class="col-2"><p>col-2</p></div> 
-        <div class="col-2"><p>col-2</p></div> 
-    </div> 
-    <div class="row">
-        <div class="col-3"><p>col-3</p></div> 
-        <div class="col-3"><p>col-3</p></div> 
-    </div> 
-    <div class="row">
-        <div class="col-4"><p>col-4</p></div> 
-        <div class="col-2"><p>col-2</p></div> 
-    </div> 
-    <div class="row">
-        <div class="col-5"><p>col-5</p></div> 
-        <div class="col-1"><p>col-1</p></div> 
-    </div> 
-    <div class="row">
+    <header class="row">
+      <div class="col-6"><p>col-6</p></div> 
+    </header><!-- End Header-->
+    <main class="row">
+      <div class="col-6"><p>col-6</p></div> 
+    </main><!-- End Main-->
+    <section class="row ingredients">
+      <div class="col-6"><p>col-6</p></div> 
+    </section><!-- End Ingredients-->
+    <section class="row author">
+      <div class="col-5"><p>col-5</p></div>
+      <div class="col-1"><p>col-1</p></div>
+    </section><!-- End Author-->
+    <footer class="row">
         <div class="col-6"><p>col-6</p></div> 
-    </div> 
+    </footer><!-- End Footer-->
   </div>
   <script src="js/scripts.js"></script>
 </body>
