Added header content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 <body>
   <div class="grid-container outline">
     <header class="row">
-      <div class="col-6"><p>col-6</p></div> 
+      <div class="col-6 flex-container">
+        <div id="header-logo" class="flex-container">
+          <div id="header-icon">
+            <img src="assets/logo.png" alt="Delicious Logo">
+          </div>
+          <div id="header-title">
+            <h1>Delicious</h1>
+            <h4>The best food blog on the web.</h4>
+          </div>
+        </div>
+        <div id="header-social-links">
+          <a href="#"><img src="assets/icons/fb-icon.png" alt="Facebook"></a>
+          <a href="#"><img src="assets/icons/twit-icon.png" alt="Twitter"></a>
+          <a href="#"><img src="assets/icons/gp-icon.png" alt="Google Plus"></a>
+          <a href="#"><img src="assets/icons/insta-icon.png" alt="Instagram"></a>
+          <a href="#"><img src="assets/icons/flic-icon.png" alt="Flicker"></a>
+          <a href="#"><img src="assets/icons/pint-icon.png" alt="Pinterest"></a>
+          <a href="#"><img src="assets/icons/rss-icon.png" alt="RSS Feed"></a>
+          <a href="#"><img src="assets/icons/mail-icon.png" alt="E-mail"></a>
+        </div>
+      </div> 
     </header><!-- End Header-->
     <main class="row">
       <div class="col-6"><p>col-6</p></div> 
