--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chocolate Pizza</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
   <link href="css/layout.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
 </head>
@@ -32,6 +33,7 @@
         </div>
       </div> 
     </header><!-- End Header-->
+    <hr>
     <main class="row">
       <div class="col-6"><p>col-6</p></div> 
     </main><!-- End Main-->
