--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="grid-container outline">
     <header class="row">
-      <div class="col-6 flex-container">
-        <div id="header-logo" class="flex-container">
+      <div class="col-3">
+        <div id="header-logo">
           <div id="header-icon">
             <img src="assets/logo.png" alt="Delicious Logo">
           </div>
@@ -21,15 +21,19 @@
             <h4>The best food blog on the web.</h4>
           </div>
         </div>
+      </div>
+      <div class="col-3">
         <div id="header-social-links">
-          <a href="#"><img src="assets/icons/fb-icon.png" alt="Facebook"></a>
-          <a href="#"><img src="assets/icons/twit-icon.png" alt="Twitter"></a>
-          <a href="#"><img src="assets/icons/gp-icon.png" alt="Google Plus"></a>
-          <a href="#"><img src="assets/icons/insta-icon.png" alt="Instagram"></a>
-          <a href="#"><img src="assets/icons/flic-icon.png" alt="Flicker"></a>
-          <a href="#"><img src="assets/icons/pint-icon.png" alt="Pinterest"></a>
-          <a href="#"><img src="assets/icons/rss-icon.png" alt="RSS Feed"></a>
-          <a href="#"><img src="assets/icons/mail-icon.png" alt="E-mail"></a>
+          <ul>
+            <li><a href="#"><img src="assets/icons/fb-icon.png" alt="Facebook"></a></li>
+            <li><a href="#"><img src="assets/icons/twit-icon.png" alt="Twitter"></a></li>
+            <li><a href="#"><img src="assets/icons/gp-icon.png" alt="Google Plus"></a></li>
+            <li><a href="#"><img src="assets/icons/insta-icon.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="assets/icons/flic-icon.png" alt="Flicker"></a></li>
+            <li><a href="#"><img src="assets/icons/pint-icon.png" alt="Pinterest"></a></li>
+            <li><a href="#"><img src="assets/icons/rss-icon.png" alt="RSS Feed"></a></li>
+            <li><a href="#"><img src="assets/icons/mail-icon.png" alt="E-mail"></a></li>
+          </ul>
         </div>
       </div> 
     </header><!-- End Header-->
