--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chocolate Pizza</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap&family=Oswald:wght@700&display=swap&family=Dancing+Script:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
   <link href="css/layout.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
 </head>
@@ -39,7 +39,30 @@
     </header><!-- End Header-->
     <hr>
     <main class="row">
-      <div class="col-6"><p>col-6</p></div> 
+      <article class="col-6">
+        <h2>Chocolate Pizza</h2>
+        <div id="post-info">
+          <div>
+            <span id="post-date">
+              Posted on 15 Dec 2013
+            </span> /
+            <span id="breadcrumbs">
+              <a href="#">Desserts</a>
+            </span>
+          </div>
+          <div id="print">
+            <a href="#"><img src="assets/print-icon.png" alt="Click to print"> Print</a>
+          </div>
+        </div>
+        <div id="main-img">
+          <img src="assets/choco-pizza.png" alt="Chocolate Pizza">
+        </div>
+        <div id="main-content">
+          <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all too the figs and toss in the saucepan with water and lemon juice. Cook over medium, heat stirring frequently, until you have chunck-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+          <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set Mixture in the fridge and wait until fig mixture is cooled.</p>
+          <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+        </div>
+      </article> 
     </main><!-- End Main-->
     <section class="row ingredients">
       <div class="col-6"><p>col-6</p></div> 
