Setup ingredients list

--- a/index.html
+++ b/index.html
@@ -65,7 +65,28 @@
       </article> 
     </main><!-- End Main-->
     <section class="row ingredients">
-      <div class="col-6"><p>col-6</p></div> 
+      <div class="col-6">
+        <div class="col-3">
+          <ul>
+            <li>1 1/2 cups milk</li>
+            <li>1/2 cup mascarpone</li>
+            <li>1/2 tsp pink salt</li>
+            <li>1 lb Black Mission Figs</li>
+            <li>1/2 cup brown sugar</li>
+            <li>2-4 tbsp water</li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>1 1/2 heavy cream</li>
+            <li>1/3 granulated sugar</li>
+            <li>2 egg yolks</li>
+            <li>1 lemon, juiced</li>
+            <li>2 tbsp butter</li>
+            <li>1 cup honey roasted pecans, roughly chopped</li>
+          </ul>
+        </div>
+      </div> 
     </section><!-- End Ingredients-->
     <section class="row author">
       <div class="col-5"><p>col-5</p></div>
