--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
       <div class="col-6">
         <div class="col-3">
           <ul>
-            <li>1 1/2 cups milk</li>
-            <li>1/2 cup mascarpone</li>
-            <li>1/2 tsp pink salt</li>
-            <li>1 lb Black Mission Figs</li>
-            <li>1/2 cup brown sugar</li>
-            <li>2-4 tbsp water</li>
+            <li><label><input type="checkbox"> 1 1/2 cups milk</label></li>
+            <li><label><input type="checkbox"> 1/2 cup mascarpone</label></li>
+            <li><label><input type="checkbox"> 1/2 tsp pink salt</label></li>
+            <li><label><input type="checkbox"> 1 lb Black Mission Figs</label></li>
+            <li><label><input type="checkbox"> 1/2 cup brown sugar</label></li>
+            <li><label><input type="checkbox"> 2-4 tbsp water</label></li>
           </ul>
         </div>
         <div class="col-3">
           <ul>
-            <li>1 1/2 heavy cream</li>
-            <li>1/3 granulated sugar</li>
-            <li>2 egg yolks</li>
-            <li>1 lemon, juiced</li>
-            <li>2 tbsp butter</li>
-            <li>1 cup honey roasted pecans, roughly chopped</li>
+            <li><label><input type="checkbox"> 1 1/2 heavy cream</label></li>
+            <li><label><input type="checkbox"> 1/3 granulated sugar</label></li>
+            <li><label><input type="checkbox"> 2 egg yolks</label></li>
+            <li><label><input type="checkbox"> 1 lemon, juiced</label></li>
+            <li><label><input type="checkbox"> 2 tbsp butter</label></li>
+            <li><label><input type="checkbox"> 1 cup honey roasted pecans, roughly chopped</label></li>
           </ul>
         </div>
       </div> 
