--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
       <div class="col-6">
         <div class="col-3">
           <ul>
-            <li><label><input type="checkbox"> 1 1/2 cups milk</label></li>
-            <li><label><input type="checkbox"> 1/2 cup mascarpone</label></li>
-            <li><label><input type="checkbox"> 1/2 tsp pink salt</label></li>
-            <li><label><input type="checkbox"> 1 lb Black Mission Figs</label></li>
-            <li><label><input type="checkbox"> 1/2 cup brown sugar</label></li>
-            <li><label><input type="checkbox"> 2-4 tbsp water</label></li>
+            <li><input type="checkbox" id="ingredient1"> <label for="ingredient1">1 1/2 cups milk</label></li>
+            <li><input type="checkbox" id="ingredient2"> <label for="ingredient2">1/2 cup mascarpone</label></li>
+            <li><input type="checkbox" id="ingredient3"> <label for="ingredient3">1/2 tsp pink salt</label></li>
+            <li><input type="checkbox" id="ingredient4"> <label for="ingredient4">1 lb Black Mission Figs</label></li>
+            <li><input type="checkbox" id="ingredient5"> <label for="ingredient5">1/2 cup brown sugar</label></li>
+            <li><input type="checkbox" id="ingredient6"> <label for="ingredient6">2-4 tbsp water</label></li>
           </ul>
         </div>
         <div class="col-3">
           <ul>
-            <li><label><input type="checkbox"> 1 1/2 heavy cream</label></li>
-            <li><label><input type="checkbox"> 1/3 granulated sugar</label></li>
-            <li><label><input type="checkbox"> 2 egg yolks</label></li>
-            <li><label><input type="checkbox"> 1 lemon, juiced</label></li>
-            <li><label><input type="checkbox"> 2 tbsp butter</label></li>
-            <li><label><input type="checkbox"> 1 cup honey roasted pecans, roughly chopped</label></li>
+            <li><input type="checkbox" id="ingredient7"> <label for="ingredient7">1 1/2 heavy cream</label></li>
+            <li><input type="checkbox" id="ingredient8"> <label for="ingredient8">1/3 granulated sugar</label></li>
+            <li><input type="checkbox" id="ingredient9"> <label for="ingredient9">2 egg yolks</label></li>
+            <li><input type="checkbox" id="ingredient10"> <label for="ingredient10">1 lemon, juiced</label></li>
+            <li><input type="checkbox" id="ingredient11"> <label for="ingredient11">2 tbsp butter</label></li>
+            <li><input type="checkbox" id="ingredient12"> <label for="ingredient12">1 cup honey roasted pecans, roughly chopped</label></li>
           </ul>
         </div>
       </div> 
