Created author section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,22 @@
         </div>
       </div> 
     </section><!-- End Ingredients-->
+    <hr>
     <section class="row author">
-      <div class="col-5"><p>col-5</p></div>
-      <div class="col-1"><p>col-1</p></div>
+      <div class="col-4">
+        <div id="author-info">
+          <div id="author-img">
+            <img src="assets/van-pic.png" alt="Vanessa Stevenson">
+          </div>
+          <div id="author-text">
+            <h6>Vanessa Stevenson</h6>
+            <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <button id="share">Share Recipe</button>
+      </div>
     </section><!-- End Author-->
     <footer class="row">
         <div class="col-6"><p>col-6</p></div> 
