Created footer section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
       </div>
     </section><!-- End Author-->
     <footer class="row">
-        <div class="col-6"><p>col-6</p></div> 
+        <div class="col-6">
+          <img src="assets/small-logo.png" alt="Delicious Logo">
+          <p>
+            Delicious &copy; 2013 - All Rights Reserved.<br>
+            Proudly published with Ghost.
+          </p>
+        </div> 
     </footer><!-- End Footer-->
   </div>
   <script src="js/scripts.js"></script>
