--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Chocolate Pizza</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap&family=Oswald:wght@700&display=swap&family=Dancing+Script:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/base.css" rel="stylesheet">
   <link href="css/layout.css" rel="stylesheet">
-  <link href="css/modules.css" rel="stylesheet">
+  <!-- <link href="css/modules.css" rel="stylesheet"> -->
 </head>
 <body>
   <div class="grid-container outline">
