--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/base.css" rel="stylesheet">
   <link href="css/layout.css" rel="stylesheet">
-  <!-- <link href="css/modules.css" rel="stylesheet"> -->
+  <link href="css/modules.css" rel="stylesheet">
+  <link href="css/state.css" rel="stylesheet">
+  <link href="css/america-theme.css" rel="stylesheet">
 </head>
 <body>
   <div class="grid-container outline">
