Used @import for CSS

--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chocolate Pizza</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap&family=Oswald:wght@700&display=swap&family=Dancing+Script:wght@700&family=Playfair+Display&display=swap" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/base.css" rel="stylesheet">
-  <link href="css/layout.css" rel="stylesheet">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/state.css" rel="stylesheet">
-  <link href="css/america-theme.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="grid-container outline">
